<resources>
    <string name="app_name">Hit-Recharge</string>
    <string name="siginin">Login</string>
    <string name="sigining">Loging In…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recharge_of">Recharge of</string>

    <string name="invalid_name_alpha_numeric">Special characters not allowed</string>
    <string name="invalid_user_name_special_characters">Special characters not allowed</string>
    <string name="invalid_user_name_contains_space">Spaces not allowed</string>
    <string name="invalid_user_name">Invalid username</string>
    <string name="invalid_user_name_length">Invalid username length (min 3; max 15)</string>
    <string name="invalid_username_length_for_login">Invalid username length (min 7; max 31)</string>

    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_equal">Miss match in passwords </string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="invalid_password_length">Invalid password length (min 6; max 30)</string>
    <string name="invalid_password_with_space">Invalid password, it contain space</string>
    <string name="invalid_password_not_alpha_numeric">Invalid password, should contain at least 1
        character, 1 number
    </string>

    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_email_pattern_not_matched">Invalid email address</string>

    <string name="hint_signiIn">Sign in to continue</string>
    <string name="hint_userName">Username</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>

    <string name="skip">SKIP</string>
    <string name="newUser">New User?</string>
    <string name="signUp">Sign Up</string>
    <string name="create_user">Create User</string>
    <string name="signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirmPassword">Confirm password</string>
    <string name="hint_location">Location Name</string>
    <string name="login">Login</string>
    <string name="hi">Hi</string>
    <string name="invalid_amount">Amount cant be null</string>
    <string name="invalid_operatorId">Please select operatot</string>
    <string name="ok">OK</string>
    <string name="no_available">No offer available</string>
    <string name="choose_plan">Chose Plan</string>
</resources>
