<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="orderId"
            type="Integer" />

        <variable
            name="fragment"
            type="com.intellyze.recharge.ui.fragment.PlansDialogFragment" />

    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp">



            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:tint="@color/black"
                android:src="@drawable/ic_close_black_24dp"
                android:onClick="@{(v) -> fragment.onClick(v)}"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvSelectionText"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/iv_back"
                android:padding="10dp"
                android:text="@string/choose_plan"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_toolbar"
            android:layout_above="@+id/button_done"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/no_scene_found"
                android:layout_centerInParent="true"
                android:text="@string/no_available">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/plassrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/button_done"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:onClick="@{(v) -> fragment.onClick(v)}"
            android:text="@string/ok"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>